--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <a href="https://www.dropbox.com/s/aoptnyydx8ls2xs/manifest.plist">ELEU App  v 1.0</a></body>
 
 <h2>alpha builds</h2>
-<a href="ihttps://dl.dropboxusercontent.com/s/aoptnyydx8ls2xs/manifest.plist">ELEU App  v 1.0</a></body>
+<a href="https://dl.dropboxusercontent.com/s/aoptnyydx8ls2xs/manifest.plist">ELEU App  v 1.0</a></body>
 </body>
 </html>
