--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 	<h2>beta builds</h2>
-<a href="https://www.dropbox.com/s/aoptnyydx8ls2xs/manifest.plist">ELEU App  v 1.0</a></body>
+<!-- <a href="https://www.dropbox.com/s/aoptnyydx8ls2xs/manifest.plist">ELEU App  v 1.0</a></body> -->
 
 <h2>alpha builds</h2>
-<a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/aoptnyydx8ls2xs/manifest.plist">ELEU App  v 1.0</a></body>
+<!-- <a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/aoptnyydx8ls2xs/manifest.plist">ELEU App  v 1.0</a></body> -->
 </body>
 </html>
